--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   shimmer: ^2.0.0
+  firebase_auth: ^4.1.0
+  google_sign_in: ^5.4.2
+  firebase_core: ^2.1.1
 
 dev_dependencies:
   flutter_test:
